style: fix searchresult z-index

--- a/store/store.module.css
+++ b/store/store.module.css
@@ -157,6 +157,7 @@
     left: 0;
     right: 0;
     top: 100%;
+    z-index: 999;
 }
 
 .search-bar button {
